--- a/slider.css
+++ b/slider.css
@@ -1,109 +1,95 @@
-html, body {
-    font-family: "Roboto", sans-serif;
+/* Собственно сам слайдер */
+.slider{
+  max-width: 400px;
+  position: relative;
+  margin: auto;
+  height: 300px;
+  margin-bottom: 15px;
+  
+}
+/* Картинка мастабируется по отношению к родительскому элементу */
+.slider .item img {
+  object-fit: cover;
+  width: 100%;
+  height: 300px;
+  border-radius: 10px;
+  border: none !important;
+  box-shadow: none !important;
+}
+/* Кнопки вперед и назад */
+.slider .prev, .slider .next {
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+}
+.slider .next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+/* При наведении на кнопки добавляем фон кнопок */
+.slider .prev:hover,
+.slider .next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+/* Заголовок слайда */
+.slideText {
+  position: absolute;
+  color: #fff;
+  font-size: 35px;
+  /* Выравнивание текста по горизонтали и по вертикали*/
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  /* Тень*/
+  text-shadow: 1px 1px 1px #000, 0 0 1em #000;
+}
+/* Кружочки */
+.slider-dots {
+  text-align: center;
+}
+.slider-dots_item{
+  cursor: pointer;
+  height: 12px;
+  width: 12px;
+  margin: 0 2px;
+  background-color: #ddd;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+.active,
+.slider-dots_item:hover {
+  background-color: #aaa;
+}
+/* Анимация слайдов */
+.slider .item {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+@-webkit-keyframes fade {
+  from {
+      opacity: .4
   }
-  body {
-    background-color: #fbab7e;
-    background-image: linear-gradient(62deg, #fbab7e 0%, #f7ce68 100%);
+  to {
+      opacity: 1
   }
-  main section {
-    width: 100%;
-    min-height: 100vh;
-    padding: 4rem 0;
+}
+@keyframes fade {
+  from {
+      opacity: .4
   }
-  main section .carousel-container {
-    width: 100%;
-    height: 40rem;
-    padding: 0;
-    position: relative;
-    overflow: hidden;
-    border-radius: 0.375rem;
+  to {
+      opacity: 1
   }
-  main section .carousel-container .item {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    display: none;
-    animation: fade 0.3s ease-in-out;
-  }
-  main section .carousel-container .item .numbertext {
-    padding: 0.5rem 0.75rem;
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    border-radius: 0.9375rem;
-    font-size: 0.875rem;
-    color: #f2f2f2;
-    background-color: rgba(0, 0, 0, 0.9);
-  }
-  main section .carousel-container .item .image {
-    width: 100%;
-    height: 100%;
-    display: flex;
-  }
-  main section .carousel-container .item .image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  main section .carousel-container .item .text {
-    width: 100%;
-    padding: 0.625rem 0.9375rem;
-    position: absolute;
-    bottom: 0;
-    font-size: 0.9rem;
-    color: #f2f2f2;
-    background-color: rgba(0, 0, 0, 0.9);
-  }
-  main section .carousel-container .item .text .title {
-    margin: 0.5rem 0 0 0;
-    font-size: 1.2rem;
-    font-weight: normal;
-  }
-  main section .carousel-container .prev, main section .carousel-container .next {
-    width: 2rem;
-    height: 2rem;
-    padding: 0.3125rem;
-    position: absolute;
-    top: calc(50% - 1rem);
-    user-select: none;
-    font-size: 1rem;
-    color: #f2f2f2;
-    border-radius: 50%;
-    transition: 0.6s ease;
-  }
-  main section .carousel-container .prev:focus, main section .carousel-container .next:focus, main section .carousel-container .prev:hover, main section .carousel-container .next:hover {
-    background-color: rgba(0, 0, 0, 0.9);
-  }
-  main section .carousel-container .prev {
-    left: 0.8rem;
-  }
-  main section .carousel-container .next {
-    right: 0.8rem;
-  }
-  main section .carousel-container .dots {
-    padding: 0.9375rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  main section .carousel-container .dots .dot {
-    width: 0.625rem;
-    height: 0.625rem;
-    margin: 0 0.125rem;
-    display: inline-block;
-    cursor: pointer;
-    border-radius: 50%;
-    background-color: #bbb;
-    transition: background-color 0.6s ease;
-  }
-  main section .carousel-container .dots .dot:focus, main section .carousel-container .dots .dot:hover {
-    background-color: #717171;
-  }
-  @keyframes fade {
-    from {
-      opacity: 0.8;
-   }
-    to {
-      opacity: 1;
-   }
-  }
+}
